service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-easy
spec:
  selector:
    app: rest-easy
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
  type: LoadBalancer
