ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-easy-ingress
spec:
  defaultBackend:
    service:
      name: rest-easy
      port:
        number: 443
